<resources>
    <string name="about">バージョン情報</string>
    <string name="abort">中止</string>
    <string name="accept">OK</string>
    <string name="add_new">(Add New)</string>
    <string name="app_name">座席表アプリ</string>
    <string name="apply">適用</string>
    <string name="button">Button</string>
    <string name="button_1">Button 1</string>
    <string name="button_2">Button 2</string>
    <string name="button_3">Button 3</string>
    <string name="button_4">Button 4</string>
    <string name="button_5">Button 5</string>
    <string name="button_6">Button 6</string>
    <string name="button_7">Button 7</string>
    <string name="button_8">Button 8</string>
    <string name="button_9">Button 9</string>
    <string name="button_10">Button 10</string>
    <string name="button_11">Button 11</string>
    <string name="button_12">Button 12</string>
    <string name="button_13">Button 13</string>
    <string name="button_14">Button 14</string>
    <string name="button_15">Button 15</string>
    <string name="button_16">Button 16</string>
    <string name="button_17">Button 17</string>
    <string name="button_18">Button 18</string>
    <string name="button_19">Button 19</string>
    <string name="button_20">Button 20</string>
    <string name="button_21">Button 21</string>
    <string name="button_22">Button 22</string>
    <string name="button_23">Button 23</string>
    <string name="button_24">Button 24</string>
    <string name="button_25">Button 25</string>
    <string name="button_26">Button 26</string>
    <string name="button_27">Button 27</string>
    <string name="button_28">Button 28</string>
    <string name="button_29">Button 29</string>
    <string name="button_30">Button 30</string>
    <string name="button_31">Button 31</string>
    <string name="button_32">Button 32</string>
    <string name="button_33">Button 33</string>
    <string name="button_34">Button 34</string>
    <string name="button_35">Button 35</string>
    <string name="button_36">Button 36</string>
    <string name="button_37">Button 37</string>
    <string name="button_38">Button 38</string>
    <string name="button_39">Button 39</string>
    <string name="button_40">Button 40</string>
    <string name="button_41">Button 41</string>
    <string name="button_42">Button 42</string>
    <string name="button_43">Button 43</string>
    <string name="button_44">Button 44</string>
    <string name="button_45">Button 45</string>
    <string name="button_46">Button 46</string>
    <string name="button_47">Button 47</string>
    <string name="button_48">Button 48</string>
    <string name="button_49">Button 49</string>
    <string name="button_50">Button 50</string>
    <string name="cancel">キャンセル</string>
    <string name="checkout_menu_item">チェックアウト</string>
    <string name="commit_menu_item">コミット</string>
    <string name="copyright">Copyright © 2022 Taichi Murakami.</string>
    <string name="current_time">現在時刻: </string>
    <string name="date_format">yyyymmddthhmmss</string>
    <string name="empty_seat">(空席)</string>
    <string name="empty_value">1234567890</string>
    <string name="error">エラー</string>
    <string name="google_apps_script_url_title">Google Apps Script URL (例: https://script.google.com/macros/s/***/exec)</string>
    <string name="google_script_url_title">Google Script URL (例: https://script.google.com/macros/s/***/exec)</string>
    <string name="google_sheet_name_title">Google スプレッドシート名 (例: https://docs.google.com/spreadsheets/d/(スプレッドシート名)/edit?usp=sharing)</string>
    <string name="google_spreadsheets_url">Google Spreadsheets URL (例: https://docs.google.com/spreadsheets/d/***/edit?usp=sharing)</string>
    <string name="help">ヘルプ</string>
    <string name="latest_update">最終更新</string>
    <string name="list">一覧</string>
    <string name="logs">履歴</string>
    <string name="network_header">ネットワーク</string>
    <string name="new_menu_item">新規</string>
    <string name="new_user_menu_item">新規利用者</string>
    <string name="no">いいえ</string>
    <string name="note">注意</string>
    <string name="options">オプション</string>
    <string name="private_room">個室</string>
    <string name="records">履歴</string>
    <string name="records_sheet_gas_url_title">記録表 Google Apps Script URL</string>
    <string name="reset">リセット</string>
    <string name="seat_announcement_format">%2$s は座席 %1$d を %3$s します。</string>
    <string name="seat_button_text_format">%d: %s</string>
    <string name="seat_in">着席</string>
    <string name="seat_out">離席</string>
    <string name="seats_sheet_gas_url_title">座席表 Google Apps Script URL</string>
    <string name="settings">設定</string>
    <string name="table_1">机 1</string>
    <string name="table_2">机 2</string>
    <string name="table_3">机 3</string>
    <string name="table_4">机 4</string>
    <string name="table_5">机 5</string>
    <string name="table_6">机 6</string>
    <string name="table_7">机 7</string>
    <string name="table_seat">机</string>
    <string name="update">更新</string>
    <string name="user">利用者</string>
    <string name="user_id">User ID</string>
    <string name="user_id_prompt">User ID:</string>
    <string name="user_name">User Name</string>
    <string name="user_name_prompt">User Name:</string>
    <string name="user_seat">User Seat</string>
    <string name="user_seat_prompt">User Seat:</string>
    <string name="users_sheet_gas_url_title">受講者 Google Apps Script URL</string>
    <string name="user_visible">User Visible</string>
    <string name="user_visible_prompt">User Visible:</string>
    <string name="users">利用者</string>
    <string name="yes">はい</string>
    <string name="title_activity_users">UsersActivity</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>