<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/network_header">

        <EditTextPreference
            app:key="google_apps_script_url"
            app:title="@string/google_apps_script_url_title"
            app:useSimpleSummaryProvider="true"
            />

        <EditTextPreference
            app:key="records_sheet_gas_url"
            app:title="@string/records_sheet_gas_url_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="seats_sheet_gas_url"
            app:title="@string/seats_sheet_gas_url_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="users_sheet_gas_url"
            app:title="@string/users_sheet_gas_url_title"
            app:useSimpleSummaryProvider="true" />

        <!--
        <EditTextPreference
            app:key="google_sheet_name"
            app:title="@string/google_sheet_name_title"
            app:useSimpleSummaryProvider="true" />-->

    </PreferenceCategory>

    <!--
    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>
    -->
</PreferenceScreen>