<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/user_id_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/user_id_prompt"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/user_id_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:text="@string/empty_value"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/user_id_label" />

    <TextView
        android:id="@+id/user_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/user_name_prompt"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/user_name_edit"
        app:layout_constraintBottom_toBottomOf="@id/user_name_edit" />

    <EditText
        android:id="@+id/user_name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="10dp"
        android:autofillHints="name"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="textAutoComplete"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_id_edit" />

    <TextView
        android:id="@+id/user_seat_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_seat_prompt"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/user_name_label"
        app:layout_constraintTop_toBottomOf="@id/user_visible_edit" />

    <TextView
        android:id="@+id/user_seat_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:text="@string/empty_value"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/user_seat_label" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/user_visible_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:minHeight="48dp"
        android:text="@string/user_visible_prompt"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_name_edit"/>
</androidx.constraintlayout.widget.ConstraintLayout>